# ossFileTransferClient

./: CONTRIBUTING.md  README.md
dependency/tmax/: cups-filters-core-drivers_1.21.6-3_amd64.deb  cups-filters_1.21.6-3_amd64.deb  gstreamer1.0-pulseaudio_1.14.4-1_amd64.deb  libbrotli1_1.0.7-2_amd64.deb  libcrypto++6_5.6.4-8tmaxos1_i386.deb  libgstreamer-gl1.0-0_1.14.4-1_amd64.deb  libhyphen0_2.8.8-7_amd64.deb  libwoff1_1.0.2-1_amd64.deb  psmisc_23.3-1_amd64.deb
src/: CMakeLists.txt
src/src/: CMakeLists.txt  main.cpp  resources.cpp
src/src/assets/: CMakeLists.txt  app-tray-menu.ui  ftc-detail-recv-file-list-row.ui  ftc-detail-recv-file-list-sub-page.ui  ftc-detail-recv-page.ui  ftc-detail-recv-request-info-sub-page.ui  ftc-detail-send-history-file-list-row.ui  ftc-detail-send-history-file-list-sub-page.ui  ftc-detail-send-history-page.ui  ftc-detail-send-history-request-info-sub-page.ui  ftc-detail-send-page.ui  ftc-home-dnd-sub-page.ui  ftc-home-header-recv-box.ui  ftc-home-header-send-box.ui  ftc-home-header-send-history-box.ui  ftc-home-page.ui  ftc-home-recv-list-row.ui  ftc-home-recv-list-sub-page.ui  ftc-login-page.ui  ftc-main-window.ui  style.css
src/src/core/: CMakeLists.txt  Clipboard.cpp  Clipboard.h  CommonUtils.cpp  CommonUtils.h  Event.h  EventManager.cpp  EventManager.h  FileInfo.cpp  FileInfo.h  FileUtils.cpp  FileUtils.h  JsonUtils.cpp  JsonUtils.h  Logger.cpp  Logger.h  NetUtils.cpp  NetUtils.h  Request.h  Response.cpp  Response.h  SocketServer.cpp  SocketServer.h  StringUtils.cpp  StringUtils.h  TimeUtils.cpp  TimeUtils.h  UrlRedirection.cpp  UrlRedirection.h  base64.cpp  base64.h  bind.c  core.cpp  core.h  http.cpp  http.h  macro.h  sys_utils.cpp  sys_utils.h  urlencode.cpp  (+1 more)
src/src/core/model/: ClientConfig.cpp  ClientConfig.h  GlobalStruct.cpp  GlobalStruct.h  GlobalVar.cpp  GlobalVar.h  PackFilePop.h  Properties.cpp  Properties.h  UploadOption.h  User.cpp  User.h  ValueObject.cpp  ValueObject.h
src/src/core/transfer/: Download.h  DownloadRequest.h  Upload.h  UploadFile.h
src/src/dbus/: ftcappdbus.h  playback.c  playback.h  playback.xml
src/src/ui/: CMakeLists.txt  Event.h  FtcEventCallback.cpp  FtcEventCallback.h  ftcapplication.cpp  ftcapplication.h  ftcdetailrecvfilelistrow.cpp  ftcdetailrecvfilelistrow.h  ftcdetailrecvfilelistsubpage.cpp  ftcdetailrecvfilelistsubpage.h  ftcdetailrecvpage.cpp  ftcdetailrecvpage.h  ftcdetailrecvrequestinfosubpage.cpp  ftcdetailrecvrequestinfosubpage.h  ftcdetailsendhistoryfilelistrow.cpp  ftcdetailsendhistoryfilelistrow.h  ftcdetailsendhistoryfilelistsubpage.cpp  ftcdetailsendhistoryfilelistsubpage.h  ftcdetailsendhistorypage.cpp  ftcdetailsendhistorypage.h  ftcdetailsendhistoryrequestinfosubpage.cpp  ftcdetailsendhistoryrequestinfosubpage.h  ftcdetailsendpage.cpp  ftcdetailsendpage.h  ftchomedndsubpage.cpp  ftchomedndsubpage.h  ftchomeheaderrecvbox.cpp  ftchomeheaderrecvbox.h  ftchomeheadersendbox.cpp  ftchomeheadersendbox.h  ftchomeheadersendhistorybox.cpp  ftchomeheadersendhistorybox.h  ftchomepage.cpp  ftchomepage.h  ftchomerecvlistrow.cpp  ftchomerecvlistrow.h  ftchomerecvlistsubpage.cpp  ftchomerecvlistsubpage.h  ftchomesendhistoryrow.cpp  ftchomesendhistoryrow.h  (+12 more)
src/src/webkit/: ftcdbusserver.cpp  ftcdbusserver.h  ftcwebkit.cpp  ftcwebkit.h
src/src/webkitextension/: CMakeLists.txt  ftcwebkitextension.cpp  ftcwebkitextension.h
